ChangeLog: 
02/26/2010: 
	## CREATED NEW CLASS: DrawingPanel
		@@Creates drawingPanels to paint onto other panels
		@@Used for painting the add, remove user (plus more later) images into the main window
	## Implemented and painted the add, remove user images onto the main window
	## The buddylist now updates when a user logs on
02/25/2010:
	## CREATED NEW CLASS: ClientLogin	
		@@Creates the login Swing window
		@@Implemented methods and components of ClientLogin - to make sure logging in works
	## Created new method in Client.java
		@@setUsername(String usernameToSet) - Allows Client to understand who is logged in at one time (because now the username is being sent from ClientLogin window
02/23/2010:
	## BACKLOG: Dynamic buddylist partially implemented
		@@List is created from otherUsers[], and it displays who is online when you sign on
		@@When they sign off, they are removed from your list
		@@TODO: dynamic update when a buddy signs in
	## Code Review

02/13/2010:
	##ServerThread instances close cleanly when a user disconnects, preventing spamming the console.
		@@Thread life is now governed by int isAlive. 
		@@Set to 1 in constructor, set to 0 on any exception caused by dead datastreams. 
		@@User/Socket is removed from hashtables and thread terminates.
	##Client handles errors in a way more informative to users
	##Cleaned up code. Mini code review

02/10/2010:
	##Fixed the GUI a lot
	##Added dynamic, tabbed GUI for each chat

02/09/2010:
	##Weekly code review(Greg/Norm)
	##Changed from an applet to a GUI
	
02/08/2010:
	##Added BuddyList method
		@@Uses XML Parsers to input usernames into buddylist.xml
	##Added createUsername method 
		@@Not completed yet
	
02/06/2010:
	##Added XML-generating code to be implemented for buddylist
	##Added JComboBox for choosing which user to send to.
		@@ List is hard coded right now, work off of buddylist XML
		   eventually switch to real buddylist
	##Made a routeMessage() method in ServerThread for better modularity