@@ -16,7 +16,9 @@ CLIENT:
 		@@ Openbox WM.
 		@@ Widget placement appears off on all components.
 		@@ Screenshot URL to follow: http://i.imgur.com/QKRx7.png
-
+	## In the Preferences window - some of the images don't show up all the time
+		@@ Also - if you open the preferences window more than once - the images don't show up
+		!! Windows 7 
 SERVER:
 	## When a user disconnects, something does close cleanly causing a lot of exceptions to be printed
 		!! RESOLVED: Thread runs respective to int isAlive. If routeMessage() can no longer run, isAlive is switched to 0 and the thread exits.
